Skip to content

sout: transcode: Can't find video encoder fourcc:mp2v because of fps

avcodec debug: libavcodec already initialized
avcodec debug: removing common factors from framerate
 (mpeg2video@05C40F50)
avcodec warning: Set profile and level
 (mpeg2video@05C40F50)
avcodec error: cannot open encoder
main debug: TIMER module_Need() : 8.000 ms - Total 8.000 ms / 1 intvls (Avg 8.000 ms)
stream_out_transcode error: cannot find video encoder (module:any fourcc:mp2v)
main debug: removing module "libmpeg2"
stream_out_transcode error: cannot create video chain
main error: cannot create packetizer output (mpgv)
Streaming / Transcoding failed:
VLC could not open the encoder.
Streaming / Transcoding failed:
VLC could not open the encoder.

avcodec error: cannot open encoder
stream_out_transcode error: cannot find video encoder (module:any fourcc:mp2v)
stream_out_transcode error: cannot create video chain
main error: cannot create packetizer output (mpgv)
main error: object is not attached

Edited by Jean-Baptiste Kempf
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information