Used the nearest available frame rate in avcodec encoder.

It fixes #1965.